@@ -30,6 +30,7 @@ Not yet released.
 - #157: :http:method:`post` requests now receive a response containing all
    fields of the created instance.
 - #148: adds support for SQLAlchemy `association proxies <http://docs.sqlalchemy.org/en/latest/orm/extensions/associationproxy.html>`_.
+- #165: fixed bug in automatic exposing of URLs for related instances.
 
 Version 0.9.3
 -------------
